	- Unqualified URLs (no leading scheme name, e.g. http:)
	  now default to the HTTP port (80) instead of the IPP
	  port (631).
	- Optimized the image writing code to do more efficient
	  color searching.  This provides a significant speed
	  improvement when including images.
	- Now hide all text inside SCRIPT, SELECT, and TEXTAREA
	  elements.

    BUG FIXES

	- If a document started with a heading greater than H1,
	  HTMLDOC would crash.
	- Full justification would incorrectly be applied to
	  text ending with a break.
	- Images using ALIGN="MIDDLE" were not centered properly
	  on the baseline.
	- Table cells that used both ROWSPAN and COLSPAN did not
	  format properly (the colspan was lost after the first
	  row.)
	- Tables that used cells that exclusively used COLSPAN
	  did not format properly.
	- When writing HTML output, image references would
	  incorrectly be mapped using the current path.
	- Images with a width or height of 0 should not be
	  written to PS or PDF output.
	- The CreationDate comment in PostScript output
	  contained a bad timezone offset (+-0500, for example,
	  instead of -0500).
	- The PHP portal example now verifies that the URL
	  passed to it contains no illegal characters.


CHANGES IN HTMLDOC v1.8.14

    NEW FEATURES

	- Added support for 128-bit encryption.
	- Added support for GET form request data in the PHP and
	  Java "portal" examples.

    CHANGES

	- Most output generation limits have been removed;
	  HTMLDOC now dynamically allocates memory as needed for
	  pages, images, headings, and links.  This has the
	  happy side-effect of reducing the initial memory
	  footprint significantly.
	- Now call setlocale() when it is available to localize
	  the date and time in the output.
	- The table parsing code now checks to see that a
	  ROWSPAN attribute fits in the table; e.g., a ROWSPAN
	  of 10 for a table that has only 6 rows remaining needs
	  to be reduced to 6...

    BUG FIXES
