@@ -44,6 +44,7 @@
 	improvement when including images.
 	<LI>Now hide all text inside SCRIPT, SELECT, and TEXTAREA
 	elements.
+	<LI>OS/2 port changes from Alexander Mai.
 
 	<H3>Bug Fixes
 
