@@ -1,1 +1,1 @@
-Click on the Setup button to install HTMLDOC v1.8.13.
+Click on the Setup button to install HTMLDOC v1.8.15.
